--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <div>
+            <h1>Samuel Odhiambo</h1>
+        </div>
+        <div>
+            <ul>
+                <li>Home</li>
+                <li>About Me</li>
+                <li>Contact Me</li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
