--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Samuel Odhiambo</h1>
         </div>
         <div>
-            <ul>
+            <ul class="nav-menu">
                 <li>Home</li>
                 <li>About Me</li>
                 <li>Contact Me</li>
