--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div>
             <ul class="nav-menu">
-                <li>Home</li>
-                <li>About Me</li>
-                <li>Contact Me</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
         </div>
     </nav>
