--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div>
             <ul class="nav-menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
