style: It will style the navigation menu to be responsive

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav class="container">
         <div>
-            <h1>Samuel Odhiambo</h1>
+            <a href="#"><h1>Samuel Odhiambo</h1></a>
         </div>
         <div>
+            <input type="checkbox" id="nav-toggle">
+            <label for="nav-toggle" class="menu-icon">
+                <span class="icon"></span>
+            </label>
             <ul class="nav-menu">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About Me</a></li>
