--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="container">
-        <div>
+        <div class="title">
             <a href="#"><h1>Samuel Odhiambo</h1></a>
         </div>
         <div>
