--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <nav class="container">
@@ -24,5 +24,26 @@
             </ul>
         </div>
     </nav>
+
+    <div class="container mt-2">
+        <div class="hr">
+            <div class="vrc a-s-c">
+                <p class="fs-2">Hi, I am Ian, an Information Communication Technologist from Nairobi, Kenya.</p>
+            </div>
+            <div class="vrc">
+                <img src="assets/images/iantech_ccexpress.png" alt="ian1" class="img-res ian1">
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
