patch: It will create section2 and style it

--- a/index.html
+++ b/index.html
@@ -8,42 +8,53 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <nav class="container">
-        <div class="title">
-            <a href="#"><h1>Samuel Odhiambo</h1></a>
-        </div>
-        <div>
-            <input type="checkbox" id="nav-toggle">
-            <label for="nav-toggle" class="menu-icon">
-                <span class="icon"></span>
-            </label>
-            <ul class="nav-menu">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container mt-2">
-        <div class="hr">
-            <div class="vrc a-s-c">
-                <p class="fs-2">Hi, I am Ian, an Information Communication Technologist from Nairobi, Kenya.</p>
+    <div class="section1">
+        <nav class="container">
+            <div class="title">
+                <a href="#"><h1>Samuel Odhiambo</h1></a>
             </div>
-            <div class="vrc">
-                <img src="assets/images/iantech_ccexpress.png" alt="ian1" class="img-res ian1">
+            <div>
+                <input type="checkbox" id="nav-toggle">
+                <label for="nav-toggle" class="menu-icon">
+                    <span class="icon"></span>
+                </label>
+                <ul class="nav-menu">
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+            </div>
+        </nav>
+    
+        <div class="container mt-2">
+            <div class="hr">
+                <div class="vrc a-s-c">
+                    <p class="fs-2">Hi, I am Ian, an Information Communication Technologist from Nairobi, Kenya.</p>
+                </div>
+                <div class="vrc">
+                    <img src="assets/images/iantech_ccexpress.png" alt="ian1" class="img-res ian1">
+                </div>
             </div>
         </div>
     </div>
+    
 
-
-
-
-
-
-
-
-
+    <div class="container mt-2">
+        <div class="hr">
+            <div class="vrc welcome">
+                <h4>Welcome to my e-portfolio</h4>
+            </div>
+        </div>
+        <div class="hr">
+            <div class="vrc-4">
+                <img src="assets/images/IMG_20210901_064451_ccexpress.png" alt="ian2" class="img-res ian1" >
+            </div>
+            <div class="vrc-8 a-s-c">
+                <h3 class="rd">This my heading</h3>
+                <p id="fs">I am a dev. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto possimus ab culpa at et molestiae error ut in beatae atque nulla, eum itaque modi consequatur, sit temporibus fuga fugiat praesentium.</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
