--- a/index.html
+++ b/index.html
@@ -28,28 +28,27 @@
     
         <div class="container mt-2">
             <div class="hr">
-                <div class="vrc a-s-c">
+                <div class="vrc a-s-c text-center">
                     <p class="fs-2">Hi, I am Ian, an Information Communication Technologist from Nairobi, Kenya.</p>
                 </div>
                 <div class="vrc">
-                    <img src="assets/images/iantech_ccexpress.png" alt="ian1" class="img-res ian1">
+                    <img src="assets/images/iantech_ccexpress.png" alt="ian1" class="img-res t-scale">
                 </div>
             </div>
         </div>
     </div>
     
-
-    <div class="container mt-2">
-        <div class="hr">
-            <div class="vrc welcome">
-                <h4>Welcome to my e-portfolio</h4>
-            </div>
+    <div class="mt-2">
+        <div>
+            <h4 class="welcome">Welcome to my e-portfolio</h4>
         </div>
+    </div>
+    <div class="container">
         <div class="hr">
             <div class="vrc-4">
-                <img src="assets/images/IMG_20210901_064451_ccexpress.png" alt="ian2" class="img-res ian1" >
+                <img src="assets/images/IMG_20210901_064451_ccexpress.png" alt="ian2" class="img-res t-scale" >
             </div>
-            <div class="vrc-8 a-s-c">
+            <div class="vrc-8 a-s-c text-center">
                 <h3 class="rd">This my heading</h3>
                 <p id="fs">I am a dev. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto possimus ab culpa at et molestiae error ut in beatae atque nulla, eum itaque modi consequatur, sit temporibus fuga fugiat praesentium.</p>
             </div>
