patch: It will create and style previous projects section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,44 @@
         </div>
     </div>
 
+    <div class="mt-2">
+        <div>
+            <h4 class="welcome">Previous Projects</h4>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="hr crd">
+            <div class="col-3">
+                <img src="" alt="">
+                <div class="c-body">
+                    <h3>Burger Palace</h3>
+                    <p>Burger palace website for ordering burgers online.</p>
+                </div>
+            </div>
+            <div class="col-3">
+                <img src="" alt="">
+                <div class="c-body">
+                    <h3>Insurance Website</h3>
+                    <p>Insurance website where clients are able to know about an insurance company</p>
+                </div>
+            </div>
+            <div class="col-3">
+                <img src="" alt="">
+                <div class="c-body">
+                    <h3>Video Downloader</h3>
+                    <p>Online video downloader where you can download YouTube videos</p>
+                </div>
+            </div>
+            <div class="col-3">
+                <img src="" alt="">
+                <div class="c-body">
+                    <h3>Quizz Board</h3>
+                    <p>Online student quizz board for testing students knowledge with automatic grading.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
