patch: It will add images for previous projects

--- a/index.html
+++ b/index.html
@@ -63,29 +63,37 @@
 
     <div class="container">
         <div class="hr crd">
-            <div class="col-3">
-                <img src="" alt="">
+            <div class="col-3 mt-2">
+                <div class="col-3-h">
+                    <img src="assets/images/SeekPng 6.png" alt="burger" class="img-res-r">
+                </div>
                 <div class="c-body">
                     <h3>Burger Palace</h3>
                     <p>Burger palace website for ordering burgers online.</p>
                 </div>
             </div>
-            <div class="col-3">
-                <img src="" alt="">
+            <div class="col-3 mt-2">
+                <div class="col-3-h">
+                    <img src="assets/images/hero-cover3.png" alt="insurance" class="img-res-r">
+                </div>
                 <div class="c-body">
                     <h3>Insurance Website</h3>
                     <p>Insurance website where clients are able to know about an insurance company</p>
                 </div>
             </div>
-            <div class="col-3">
-                <img src="" alt="">
+            <div class="col-3 mt-2">
+                <div class="col-3-h">
+                    <img src="assets/images/vidyeo.png" alt="vidyeo" class="img-res-r">
+                </div>
                 <div class="c-body">
                     <h3>Video Downloader</h3>
                     <p>Online video downloader where you can download YouTube videos</p>
                 </div>
             </div>
-            <div class="col-3">
-                <img src="" alt="">
+            <div class="col-3 mt-2">
+                <div class="col-3-h">
+                    <img src="assets/images/qboard.png" alt="quizz" class="img-res-r">
+                </div>
                 <div class="c-body">
                     <h3>Quizz Board</h3>
                     <p>Online student quizz board for testing students knowledge with automatic grading.</p>
