patch: It will create tags for previous projects languages

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
                     <img src="assets/images/SeekPng 6.png" alt="burger" class="img-res-r">
                 </div>
                 <div class="c-body">
-                    <h3>Burger Palace</h3>
+                    <a href="https://samuelodhiambo.github.io/burgerpalace/" target="blank"><h3>Burger Palace</h3></a>
                     <p>Burger palace website for ordering burgers online.</p>
+                    <p class="tags"><span class="blue">HTML</span>&nbsp;<span class="blue">CSS</span></p>
                 </div>
             </div>
             <div class="col-3 mt-2">
@@ -77,8 +78,9 @@
                     <img src="assets/images/hero-cover3.png" alt="insurance" class="img-res-r">
                 </div>
                 <div class="c-body">
-                    <h3>Insurance Website</h3>
+                    <a href="https://samuelodhiambo.github.io/InsuranceWebsite/" target="blank"><h3>Insurance Website</h3></a>
                     <p>Insurance website where clients are able to know about an insurance company</p>
+                    <p class="tags"><span class="blue">HTML</span>&nbsp;<span class="blue">CSS</span></p>
                 </div>
             </div>
             <div class="col-3 mt-2">
@@ -86,8 +88,9 @@
                     <img src="assets/images/vidyeo.png" alt="vidyeo" class="img-res-r">
                 </div>
                 <div class="c-body">
-                    <h3>Video Downloader</h3>
+                    <a href="https://vidyeo.pythonanywhere.com" target="blank"><h3>Video Downloader</h3></a>
                     <p>Online video downloader where you can download YouTube videos</p>
+                    <p class="tags"><span class="blue">Python(Django)</span>&nbsp;<span class="blue">HTML</span>&nbsp;<span class="blue">CSS</span>&nbsp;<span class="blue">JS</span></p>
                 </div>
             </div>
             <div class="col-3 mt-2">
@@ -95,8 +98,9 @@
                     <img src="assets/images/qboard.png" alt="quizz" class="img-res-r">
                 </div>
                 <div class="c-body">
-                    <h3>Quizz Board</h3>
+                    <a href="https://samuelodhiambo.github.io/QuizBoard/" target="blank"><h3>Quizz Board</h3></a>
                     <p>Online student quizz board for testing students knowledge with automatic grading.</p>
+                    <p class="tags"><span class="blue">HTML</span>&nbsp;<span class="blue">CSS</span>&nbsp;<span class="blue">JS</span></p>
                 </div>
             </div>
         </div>
