patch: It will create work experience section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,28 @@
                 </div>
             </div>
         </div>
+
+        <h4 class="mt-2">Work Experience</h4>
+        <div class="hr">
+            <div class="vrc-4">
+                <img src="https://www.laptopclinic.co.ke/img/cms/685644c3d0f7941550c0b723761be29d.png" alt="ian2" class="img-res t-scale" >
+            </div>
+            <div class="vrc-8 a-s-c text-center">
+                <h3 class="rd">RunCom Computers</h3>
+                <p id="fs">Computer repair technician at RunCom Computers Kisii. Troubleshooting and repair of broken laptop hardware and software.</p>
+                <p><em>Repair Technician</em></p>
+            </div>
+        </div>
+        <div class="hr reverse-flex">
+            <div class="vrc-8 a-s-c text-center">
+                <h3 class="rd">Homabay County Government</h3>
+                <p id="fs">Junior ICT officer attachee at Homabay County Government ICT Department. Repair and Maintenance of Computers and user support</p>
+                <p><em>ICT Officer</em></p>
+            </div>
+            <div class="vrc-4">
+                <img src="https://pbs.twimg.com/profile_images/466806848923119616/CeAVkzd8_400x400.jpeg" alt="ian2" class="img-res t-scale" >
+            </div>
+        </div>
     </div>
 
 </body>
