--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </div>
 
     <div class="container mt-2 text-center">
+        <hr>
         <h4 class="mt-2">Education Background</h4>
         <div class="hr">
             <div class="vrc d-flex mt-2">
@@ -187,6 +188,15 @@
             <div class="vrc-4">
                 <img src="https://pbs.twimg.com/profile_images/466806848923119616/CeAVkzd8_400x400.jpeg" alt="ian2" class="img-res t-scale" >
             </div>
+        </div>
+        &nbsp;
+        <hr>
+    </div>
+
+    <div class="container mt-2">
+        <div class="container bg-theme note">
+            <p><em>"Passion!!! Passion!!! Passion!!! That has been the greatest driving force in my tech journey. I have also had passion for coding and always kept watching tutorials from when I was a Fresh man back in college. My interest grew more and I saw myself in a career where I would sit behind a computer and create softwares that would solve a lot of people's problems. I have learnt some coding and still learning more and that is why am still taking coding classes. When they say learning never stops, I can't agree any less."</em></p>
+            <p><em><strong><small>Samuel Odhiambo</small></strong></em></p>
         </div>
     </div>
 
