patch: It will add and style hobbies section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 <img src="assets/images/IMG_20210901_064451_ccexpress.png" alt="ian2" class="img-res t-scale" >
             </div>
             <div class="vrc-8 a-s-c text-center">
-                <h3 class="rd">This my heading</h3>
-                <p id="fs">I am a dev. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto possimus ab culpa at et molestiae error ut in beatae atque nulla, eum itaque modi consequatur, sit temporibus fuga fugiat praesentium.</p>
+                <p id="fs">I am an Information Communication Technologist with a passion for software development. I do freelance web development using Django, a Python for web framework among other tools. I also do Graphic design, like making posters and ecards using Adobe Illustrator, Video editing using Adobe premier among many other ICT related tasks.</p>
             </div>
         </div>
     </div>
@@ -197,6 +196,17 @@
         <div class="container bg-theme note">
             <p><em>"Passion!!! Passion!!! Passion!!! That has been the greatest driving force in my tech journey. I have also had passion for coding and always kept watching tutorials from when I was a Fresh man back in college. My interest grew more and I saw myself in a career where I would sit behind a computer and create softwares that would solve a lot of people's problems. I have learnt some coding and still learning more and that is why am still taking coding classes. When they say learning never stops, I can't agree any less."</em></p>
             <p><em><strong><small>Samuel Odhiambo</small></strong></em></p>
+        </div>
+    </div>
+
+    <div class="container mt-2 welcome">
+        <h4>Hobbies and Interests</h4>
+        <div class="vrc div-center">
+            <ul class="hobbies">
+                <li>Reading (Tech books, Blogs and Articles)</li>
+                <li>I love Music (All genres)</li>
+                <li>Watching Movies (Sci-Fi)</li>
+            </ul>
         </div>
     </div>
 
