patch: It will add contact me section

--- a/index.html
+++ b/index.html
@@ -210,5 +210,29 @@
         </div>
     </div>
 
+    <div class="mt-2">
+        <div class="welcome">
+            <h4>Contact Me</h4>
+            <p>You can reach me through one of the following ways:</p>
+        </div>
+    </div>
+
+    <div class="container mt-2">
+        <div class="hr">
+            <div class="vrc">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlX_nRbaegcAP2Iv66xNRHZYQq9zaLeKN5Gw&usqp=CAU" alt="phone" class="img-res">
+            </div>
+            <div class="vrc a-s-c">
+                <ul class="contact">
+                    <li>Samuel Odhiambo</li>
+                    <li>P.O. Box,</li>
+                    <li>316, Suna</li>
+                    <li>Phone: +254 796 525 626</li>
+                    <li>Email: <a href="mailto:samuel.odhiambo@student.moringaschool.com">samuel.odhiambo@student.moringaschool.com</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
