patch: It will create footer section

--- a/index.html
+++ b/index.html
@@ -234,5 +234,14 @@
         </div>
     </div>
 
+    <div class="footer">
+        <div class="container mt-2">
+            <div class="d-flex flex-between">
+                <p>SamIan-Tech &copy; 2022</p>
+                <p>Designed By Samuel Odhiambo</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
