fix: It will fix alignment for contact and footer on small screens

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div>
 
     <div class="container mt-2">
-        <div class="hr">
+        <div class="hr text-center">
             <div class="vrc">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlX_nRbaegcAP2Iv66xNRHZYQq9zaLeKN5Gw&usqp=CAU" alt="phone" class="img-res">
             </div>
@@ -234,8 +234,8 @@
         </div>
     </div>
 
-    <div class="footer">
-        <div class="container mt-2">
+    <div class="footer mt-2">
+        <div class="container">
             <div class="d-flex flex-between">
                 <p>SamIan-Tech &copy; 2022</p>
                 <p>Designed By Samuel Odhiambo</p>
