link: It will add href for navigation links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="section1">
+    <div class="section1" id="home">
         <nav class="container">
             <div class="title">
                 <a href="#"><h1>Samuel Odhiambo</h1></a>
@@ -19,9 +19,10 @@
                     <span class="icon"></span>
                 </label>
                 <ul class="nav-menu">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li><a href="/" class="active">Home</a></li>
+                    <li><a href="#prevp">Previous Projects</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
                 </ul>
             </div>
         </nav>
@@ -56,7 +57,7 @@
 
     <div class="mt-2">
         <div>
-            <h4 class="welcome">Previous Projects</h4>
+            <h4 class="welcome" id="prevp">Previous Projects</h4>
         </div>
     </div>
 
@@ -111,7 +112,7 @@
 
     <div class="mt-2">
         <div class="welcome">
-            <h4>About Me</h4>
+            <h4 id="about">About Me</h4>
             <p>Your all in one tech guy</p>
         </div>
     </div>
@@ -212,7 +213,7 @@
 
     <div class="mt-2">
         <div class="welcome">
-            <h4>Contact Me</h4>
+            <h4 id="contact">Contact Me</h4>
             <p>You can reach me through one of the following ways:</p>
         </div>
     </div>
