fix: It will fix link for home menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="section1" id="home">
         <nav class="container">
             <div class="title">
-                <a href="#"><h1>Samuel Odhiambo</h1></a>
+                <a href="."><h1>Samuel Odhiambo</h1></a>
             </div>
             <div>
                 <input type="checkbox" id="nav-toggle">
@@ -19,7 +19,7 @@
                     <span class="icon"></span>
                 </label>
                 <ul class="nav-menu">
-                    <li><a href="/" class="active">Home</a></li>
+                    <li><a href="." class="active">Home</a></li>
                     <li><a href="#prevp">Previous Projects</a></li>
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#contact">Contact Me</a></li>
